# RustVpsMon

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  docker-compose.yml  specification.md
.github/workflows/: release.yml
assets/: style.css
deploy/fail2ban/: README.md
deploy/fail2ban/filter.d/: nginx-4xx.conf
deploy/fail2ban/jail.d/: nginx-4xx.conf
src/: alerts.rs  config.rs  db.rs  main.rs  metrics.rs  notify.rs
src/collectors/: docker.rs  mod.rs  vps.rs
src/web/: routes.rs  templates.rs
templates/: alerts.html  container_logs.html  docker_metrics.html  index.html  vps_metrics.html
