[package]
name = "rustmon"
version = "1.0.2"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
askama = "0.16.0"
axum = "0.8.9"
bollard = "0.21.0"
dotenvy = "0.15"
envy = "0.4"
futures-util = "0.3.32"
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "builder"] }
mime_guess = "2.0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust-embed = "8.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite"] }
sysinfo = "0.39.5"
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
